# gravity_sim

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
src/: glad.c  gravity_sim.cpp  main.cpp
